<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/trans_black"
    android:orientation="vertical">
    <Button
        android:id="@+id/ink_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ink"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@drawable/menu_split_line"/>
    <Button
        android:id="@+id/line_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/line"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@drawable/menu_split_line"/>
    <Button
        android:id="@+id/circle_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/circle"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@drawable/menu_split_line"/>
    <Button
        android:id="@+id/circle_fill_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/circle_fill"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@drawable/menu_split_line"/>
    <Button
        android:id="@+id/rect_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rect"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@drawable/menu_split_line"/>
    <Button
        android:id="@+id/rect_fill_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rect_fill"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@drawable/menu_split_line"/>
    <Button
        android:id="@+id/solid_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/solid"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@drawable/menu_split_line"/>
    <Button
        android:id="@+id/outer_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/outer_glow"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@drawable/menu_split_line"/>
    <Button
        android:id="@+id/colorful_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/colorful"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@drawable/menu_split_line"/>
    <Button
        android:id="@+id/pen_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/pen"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>
</LinearLayout>